exercises/04-networking/k8s/client-denied.yaml
apiVersion: v1
kind: Pod
metadata:
  name: net-client-denied
  labels:
    access: denied
spec:
  containers:
  - name: client
    image: registry.k8s.io/e2e-test-images/busybox:1.29-2
    command: ["sh", "-c", "sleep 3600"]
