exercises/04-networking/k8s/service-broken.yaml
apiVersion: v1
kind: Service
metadata:
  name: net-web-broken
spec:
  selector:
    app: net-web-typo
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
