exercises/04-networking/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: net-web
spec:
  selector:
    app: net-web
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
