exercises/04-networking/k8s/networkpolicy-allow-from-allowed-client.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: net-web-allow-from-allowed-client
spec:
  podSelector:
    matchLabels:
      app: net-web
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          access: allowed
    ports:
    - protocol: TCP
      port: 8080
