exercises/04-networking/k8s/networkpolicy-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: net-web-deny-all-ingress
spec:
  podSelector:
    matchLabels:
      app: net-web
  policyTypes:
  - Ingress
